--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.password = password
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto = update
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+springdoc.paths-to-exclude = /locations/**, /profile/**, /items/search/**, /items/{id}/location/**
