--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto = update
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+springdoc.swagger-ui.url = /api-docs.yaml
 springdoc.paths-to-exclude = /locations/**, /profile/**, /items/search/**, /items/{id}/location/**
